Fix alignment of pill letter (#8874)

--- a/res/css/views/rooms/_BasicMessageComposer.scss
+++ b/res/css/views/rooms/_BasicMessageComposer.scss
@@ -57,7 +57,6 @@ limitations under the License.
                 user-select: all;
                 position: relative;
                 cursor: unset; // We don't want indicate clickability
-                display: inline-block;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
